        PR c++/38579         * search.c (protected_accessible_p): N doesn't vary.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143439 138bc75d-0d04-0410-961f-82ee72b054a4